# WA-Bot-Template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  CODEOWNERS.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.dev  IMPROVEMENTS.md  LICENSE  Pulumi.yaml  README.md  STRUCTURE.md  dotenv.txt  example.env.txt  main.py  noxfile.py  pyproject.toml  requirements.txt  run.py
.github/: FUNDING.yml  copilot-instructions.md
.github/prompts/: agent.md  improvements.md
.github/workflows/: ci.yml  main.yml  pulumi.yml
app/: auth.py  main.py
app/routers/: utils.py
app/routers/messages/: messages.py  templates.py
app/services/: messaging.py
backend/: __init__.py  auth.py  main.py
backend/middleware/: __init__.py  custom_middleware.py
backend/routers/: __init__.py  utils.py
backend/routers/messages/: __init__.py  messages.py  templates.py
backend/schemas/: message_templates.py
backend/services/: __init__.py  messaging.py
infra/: Pulumi.dev.yaml  Pulumi.yaml  __init__.py  __main__.py
infra/Providers/aws/: __init__.py  ec2.py  s3.py
infra/Providers/azure/: __init__.py
infra/Providers/gcp/: __init__.py
tests/: __init__.py  conftest.py  example.py  factories_test.py  fixtures_test.py
tests/integration/: api_test.py  webhook_test.py
