[project]
name = "wa-bot-template"
version = "0.1.1"
description = "Template for WA bot using FastAPI and uv"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Lautaro Pacella", email = "lautaropacella@hotmail.com" },
    {name = "Carlos Ferreyra", email = "eduferreyraok@gmail.com"}
]
maintainers = [ {name = "Carlos Ferreyra", email = "eduferreyraok@gmail.com"}]
keywords = ["whatsapp", "bot", "fastapi", "uv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Infrastructure :: Serverless",
]

dependencies = [
    "boto3>=1.35.94",
    "fastapi[standard]>=0.115.6",
    "mangum>=0.19.0",
    "ngrok>=1.4.0",
    "pre-commit>=4.0.1",
    "pulumi-docker>=4.6.1",
    "pulumi-esc-sdk>=0.11.0",
    "pulumi-gcp>=8.14.0",
    "pulumi-random>=4.16.8",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "darglint>=1.8.1",
    "isort>=5.13.2",
    "nox>=2024.10.9",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "commitizen>=4.1.0",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# Tool configuration
[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4
[tool.ruff.lint]
# select = ["E4", "E7", "E9", "F"]
select =["ALL"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov"
testpaths = ["tests"]

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*"]

[tool.uv]
preview = true
default-groups = ["dev"]
managed = true

[dependency-groups]
dev = [
    "nox>=2024.10.9",
    "pytest>=8.3.4",
]
