# This file is used to configure the project and its dependencies
# For more information about this pyproject.toml, see UV documentation: https://github.com/astral-sh/uv/blob/main/docs/reference/settings.md
[project]
name = "wa-bot-template"
version = "0.1.1"
description = "Template for WA bot using FastAPI and uv"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Lautaro Pacella", email = "lautaropacella@hotmail.com" },
    {name = "Carlos Ferreyra", email = "eduferreyraok@gmail.com"}
]
maintainers = [ {name = "Carlos Ferreyra", email = "eduferreyraok@gmail.com"}]
keywords = ["whatsapp", "bot", "fastapi", "uv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Infrastructure :: Serverless",
]

dependencies = [
    "boto3>=1.35.94",
    "fastapi[standard]>=0.115.6",
    "mangum>=0.19.0",
    "ngrok>=1.4.0",
    "pre-commit>=4.0.1",
    "pulumi-docker>=4.6.1",
    "pulumi-esc-sdk>=0.11.0",
    "pulumi-gcp>=8.14.0",
    "pulumi-random>=4.16.8",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "nox>=2024.10.9",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[project.optional-dependencies]


# UV configuration
[tool.uv]
preview = true
default-groups = ["dev"]
required-version = ">=0.5.18"
upgrade = true
# managed = false # Uncomment this line to disable the managed mode


# Hatchling configuration
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4
[tool.ruff.lint]
# select = ["E4", "E7", "E9", "F", "W", "C", "D", "I", "R", "T", "B", "C", "E", "F", "I", "N", "R", "T", "W"] 
select =["ALL"]
ignore = ["S","D104"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov"
testpaths = ["tests"]

# Coverage configuration
[tool.coverage.run]
source = ["backend"]
omit = ["tests/*"]

